# pico_ocaml

./: CMakeLists.txt  README.md  clock.ml  frametables.S  hello.ml  lcd.ml  lwipopts.h  memmap_flash.ld  net.ml  net_stubs.c  net_stubs.h  netif.ml  ocaml_stubs.c  ocaml_stubs.h  pico_main.c  pio.ml  pthread.h  unistd.h
cmake/: build_runtime.cmake  build_stdlib.cmake
lib/: curry.ml  curry.s
sys/: ioctl.h  mman.h
